// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test src/utils/plugin.ts > test plugin interceptor > webpack5 1`] = `
"/******/ (() => { / webpackBootstrap
var __webpack_exports__ = {};
console.log('a');

/ hello world
/******/ })()
;"
`;

exports[`test src/utils/plugin.ts > test plugin interceptor > webpack5 2`] = `
[
  {
    "assets": [
      "bundle.js",
    ],
    "dependencies": [],
    "entry": true,
    "id": "0",
    "imported": [],
    "initial": true,
    "modules": [
      1,
    ],
    "name": "main",
    "parsedSize": 0,
    "size": 33,
  },
]
`;

exports[`test src/utils/plugin.ts test plugin interceptor webpack5 1`] = `
"/******/ (() => { // webpackBootstrap
var __webpack_exports__ = {};
console.log('a');

// hello world
/******/ })()
;"
`;

exports[`test src/utils/plugin.ts test plugin interceptor webpack5 2`] = `
[
  {
    "assets": [
      "bundle.js",
    ],
    "dependencies": [],
    "entry": true,
    "id": "0",
    "imported": [],
    "initial": true,
    "modules": [
      1,
    ],
    "name": "main",
    "parsedSize": 0,
    "size": 33,
  },
]
`;
